--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,11 @@ dependencies = [
     "loguru (>=0.7.3,<0.8.0)",
     "dotenv (>=0.9.9,<0.10.0)",
     "jinja2 (>=3.1.6,<4.0.0)",
-    "python-multipart (>=0.0.20,<0.0.21)"
+    "python-multipart (>=0.0.20,<0.0.21)",
+    "aiohttp (>=3.11.18,<4.0.0)",
+    "redis (>=6.1.0,<7.0.0)",
+    "celery (>=5.5.2,<6.0.0)",
+    "aiofiles (>=24.1.0,<25.0.0)",
 ]
 
 [tool.poetry]
