--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ aiohttp = "^3.11.18"
 redis = "^6.1.0"
 celery = "^5.5.2"
 aiofiles = "^24.1.0"
+gunicorn = "^23.0.0"
 
 [tool.poetry.group.dev.dependencies]
 
