--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,10 @@ services:
     build: .
     image: fastapi_app:latest
     container_name: fastapi_app
-    ports:
-      - "8080:8080"
-    #    restart: unless-stopped
+    user: "1000:1000"
+#    ports:
+#      - "8080:8080"
+    restart: unless-stopped
     depends_on:
       - redis
     env_file: .env
@@ -23,15 +24,18 @@ services:
       - LETSENCRYPT_HOST=${DOMAIN}
       - LETSENCRYPT_EMAIL=${SMTP_USER}
     volumes:
-      - shared_data:/uploads
+      - shared_data:/app/logs
+      - logs_data:/app/logs
     expose:
       - "8080"
     networks:
-      - my_network
+      - youtubick_network
+      - nginx-proxy
 
   worker:
     image: fastapi_app:latest
     container_name: celery_worker
+    user: "1000:1000"
     env_file: .env
     environment:
       - REDIS_HOST=${REDIS_HOST}
@@ -40,11 +44,12 @@ services:
       - SMTP_PORT=${SMTP_PORT}
       - SMTP_USER=${SMTP_USER}
       - SMTP_PASSWORD=${SMTP_PASSWORD}
-    command: celery -A config.config worker
+    command: celery -A config.config worker --loglevel=info
     volumes:
-      - shared_data:/uploads
+      - shared_data:/app/logs
+      - logs_data:/app/logs
     networks:
-      - my_network
+      - youtubick_network
 
   redis:
     image: redis:7-alpine
@@ -55,7 +60,7 @@ services:
     volumes:
       - redis_data:/data
     networks:
-      - my_network
+      - youtubick_network
 
   nginx-proxy:
     image: jwilder/nginx-proxy
@@ -66,11 +71,12 @@ services:
     restart: unless-stopped
     volumes:
       - /etc/nginx/vhost.d
-      - /usr/share/nginx/html
+      - /usr/share/nginx/html:/usr/share/nginx/html
       - /var/run/docker.sock:/tmp/docker.sock:ro
       - certs:/etc/nginx/certs:ro
     networks:
-      - my_network
+      - youtubick_network
+      - nginx-proxy
 
   letsencrypt:
     image: jrcs/letsencrypt-nginx-proxy-companion
@@ -81,16 +87,25 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - certs:/etc/nginx/certs
+      - /usr/share/nginx/html:/usr/share/nginx/html
     networks:
-      - my_network
+      - youtubick_network
+      - nginx-proxy
 
 
 
 networks:
-  my_network:
+  youtubick_network:
+    name: youtubick_network
+  nginx-proxy:
+    external: true
 
 volumes:
-  redis_data:
-  shared_data:
   certs:
+  redis_data:
+    name: youtubick_redis_data
+  shared_data:
+    name: youtubick_shared_data
+  logs_data:
+    name: youtubick_logs_data
 
