--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     image: fastapi_app:latest
     container_name: fastapi_app
     user: "1000:1000"
-    #    ports:
-    #      - "8080:8080"
+#    ports:
+#      - "8080:8080"
     restart: unless-stopped
     depends_on:
       - redis
@@ -23,6 +23,7 @@ services:
       - VIRTUAL_HOST=${DOMAIN}
       - LETSENCRYPT_HOST=${DOMAIN}
       - LETSENCRYPT_EMAIL=${SMTP_USER}
+      - HTTPS_METHOD=redirect
     volumes:
       - ./app/static:/app/static:ro
       - shared_data:/app/uploads
@@ -32,10 +33,17 @@ services:
     networks:
       - youtubick_network
       - nginx-proxy
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/healthchecker" ]
+      interval: 30s
+      timeout: 5s
+      retries: 3
 
   worker:
     image: fastapi_app:latest
     container_name: celery_worker
+    depends_on:
+      - redis
     user: "1000:1000"
     env_file: .env
     environment:
@@ -62,6 +70,11 @@ services:
       - redis_data:/data
     networks:
       - youtubick_network
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 30s
+      timeout: 5s
+      retries: 3
 
   nginx-proxy:
     image: jwilder/nginx-proxy
@@ -71,7 +84,7 @@ services:
       - "443:443"
     restart: unless-stopped
     volumes:
-      - /etc/nginx/vhost.d
+      - ./vhost.d:/etc/nginx/vhost.d:ro
       - /usr/share/nginx/html:/usr/share/nginx/html
       - /var/run/docker.sock:/tmp/docker.sock:ro
       - certs:/etc/nginx/certs:ro
