--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ anyio==4.9.0
 attrs==25.3.0
 billiard==4.2.1
 celery==5.5.2
+certifi==2025.6.15
+charset-normalizer==3.4.2
 click==8.2.1
 click-didyoumean==0.3.1
 click-plugins==1.1.1
@@ -22,10 +24,7 @@ kombu==5.5.3
 loguru==0.7.3
 MarkupSafe==3.0.2
 multidict==6.4.4
-mypy_extensions==1.1.0
 packaging==25.0
-pathspec==0.12.1
-platformdirs==4.3.8
 prompt_toolkit==3.0.51
 propcache==0.3.1
 pydantic==2.11.5
@@ -34,14 +33,16 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-multipart==0.0.20
 redis==6.2.0
+requests==2.32.4
 six==1.17.0
 sniffio==1.3.1
 starlette==0.46.2
 typing-inspection==0.4.1
 typing_extensions==4.13.2
 tzdata==2025.2
+urllib3==2.5.0
 uvicorn==0.34.2
 vine==5.1.0
 wcwidth==0.2.13
 yarl==1.20.0
-yt-dlp==2025.5.22
+yt-dlp==2025.6.9
