--- a/.env.template
+++ b/.env.template
@@ -1,13 +1,10 @@
-REDIS_HOST=redis
-REDIS_PORT=6379
+SMTP_USER=<почта>
 
-SMTP_SERVER=
-SMTP_PORT=
-SMTP_USER=
-SMTP_PASSWORD=
-
-DOMAIN=
+DOMAIN=<домен>
 
 BTC_ADDRESS=
 ETH_ADDRESS=
 SOL_ADDRESS=
+
+BOT_TOKEN=<токен от Папы бота>
+CHAT_ID=<отправьте боту сообщение и получите по https://api.telegram.org/bot<ТОКЕН>/getUpdates >
